@@ -1,3 +1,7 @@
+[2 May 2008]
+
+* Permenently remove old ActiveRecord::Validations::DateTime namespace.
+
 [19 March 2008]
 
 * Fix README typo.
